--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     text-align: center;
@@ -32,21 +31,25 @@ h3 {
 
 a {
     color: #11999E;
+    margin: 100px auto;
+    text-decoration: none;
 }
 
-div {
-    /*background-color: blueviolet;*/
-} 
+/*div {
+    background-color: blueviolet;
+}*/ 
 
 .top-container {
-    background-color: #C9EEFF;
+    background-color: #eaf6f6;
     padding-top: 100px;
 }
 
-.middle-container {
-}
+/*.middle-container {
+}*/
 
 .bottom-container {
+    background-color: #66bfbf;
+    margin-bottom: 0%;
 }
 
 .pro {
@@ -69,11 +72,89 @@ div {
     height: 250px;
 }
 
-.skill-image {
-    width: 250px;
-    height: 250px;
+.html-image {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
 }
 
-#css-image {
-    width: 315px;
+.css-image {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
 }
+
+/*.html-description {
+    clear: left;
+}
+
+.css-description {
+    clear: right;
+}*/
+
+.skill-row {
+    width: 50%;
+    margin: 150px auto;
+    text-align: left;
+    line-height: 2;
+}
+
+.hello-description {
+    color: #40514e;
+    width: 30%;
+    margin: 0 auto;
+}
+
+.css-description {
+    margin-bottom: 200px;
+}
+
+hr {
+    margin: 100px auto;
+    background-color: transparent;
+    border-style: none;
+    border-top-style: dotted;
+    border-color: #eaf6f6;
+    border-width: 8px;
+    width: 70px;
+    clear: both;
+}
+
+.footer-text {
+    color: #eaf6f6;
+    padding-bottom: 50px;
+    margin-bottom: 0px;
+}
+
+.btn {
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    line-height: 8;
+  }
+  
+  .btn:hover {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    text-decoration: none;
+  }
+
+  .footer-link {
+    line-height: 8;
+    margin: 500px 50px;
+  }
